--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Neo's Hatena Blogs",
   "private": true,
   "scripts": {
-    "css-corredor": "node-sass -w ./src/styles/Corredor.scss -r --output-style compressed -o ./dist/styles/",
+    "css-corredor": "npm run css-corredor-build && npm run css-corredor-build -- -w",
+    "css-corredor-build": "node-sass ./src/styles/Corredor.scss -r --output-style compressed -o ./dist/styles/",
     "min-css": "gulp min-css",
     "min-css-corredor": "gulp min-css-corredor",
     "min-css-murga": "gulp min-css-murga",
@@ -27,7 +28,7 @@
   },
   "homepage": "https://github.com/Neos21GitHub/HatenaBlogs#readme",
   "devDependencies": {
-    "@neos21/neos-normalize": "1.0.1",
+    "@neos21/neos-normalize": "1.0.2",
     "gulp": "3.9.1",
     "gulp-clean-css": "3.0.4",
     "gulp-load-plugins": "1.5.0",
