Modify Amazon Rakuten Icon to Murga & El Mylar

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "css-murga": "gulp build-css-murga && npm run css-strip-murga",
     "css-elmylar": "gulp build-css-elmylar && npm run css-strip-elmylar",
     "css-bitarcher": "gulp build-css-bitarcher",
-    "css-strip": "node strip-bom.js ./dist/styles/*",
-    "css-strip-corredor": "node strip-bom.js ./dist/styles/Corredor.css",
-    "css-strip-murga": "node strip-bom.js ./dist/styles/Murga.css",
-    "css-strip-elmylar": "node strip-bom.js ./dist/styles/ElMylar.css",
+    "css-strip": "node strip-bom.js *",
+    "css-strip-corredor": "node strip-bom.js Corredor",
+    "css-strip-murga": "node strip-bom.js Murga",
+    "css-strip-elmylar": "node strip-bom.js ElMylar",
     "js": "gulp build-js",
     "js-corredor": "gulp build-js-corredor",
     "js-murga": "gulp build-js-murga",
