--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "css-murga": "gulp build-css-murga && npm run css-strip-murga",
     "css-elmylar": "gulp build-css-elmylar && npm run css-strip-elmylar",
     "css-bitarcher": "gulp build-css-bitarcher",
-    "css-strip": "node strip-bom.js '*'",
+    "css-strip": "node strip-bom.js *",
     "css-strip-corredor": "node strip-bom.js Corredor",
     "css-strip-murga": "node strip-bom.js Murga",
     "css-strip-elmylar": "node strip-bom.js ElMylar",
