--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "css-corredor": "gulp build-css-corredor && npm run css-strip-corredor",
     "css-murga": "gulp build-css-murga && npm run css-strip-murga",
     "css-elmylar": "gulp build-css-elmylar && npm run css-strip-elmylar",
-    "css-bitarcher": "gulp build-css-bitarcher",
+    "css-bitarcher": "gulp build-css-bitarcher && npm run css-strip-bitarcher",
     "css-strip": "node strip-bom.js *",
     "css-strip-corredor": "node strip-bom.js Corredor",
     "css-strip-murga": "node strip-bom.js Murga",
     "css-strip-elmylar": "node strip-bom.js ElMylar",
+    "css-strip-bitarcher": "node strip-bom.js BitArcher",
     "js": "gulp build-js",
     "js-corredor": "gulp build-js-corredor",
     "js-murga": "gulp build-js-murga",
