--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "hatenablogs",
+  "name": "@neos21/hatena-blogs",
   "version": "1.0.0",
   "description": "Neo's Hatena Blogs",
-  "private": true,
   "scripts": {
     "gulp": "gulp",
     "strip-bom": "strip-bom",
@@ -11,13 +10,14 @@
     "css-murga": "gulp build-css-murga && npm run css-strip-murga",
     "css-elmylar": "gulp build-css-elmylar && npm run css-strip-elmylar",
     "css-bitarcher": "gulp build-css-bitarcher && npm run css-strip-bitarcher",
-    "css-strip": "node strip-bom.js *",
+    "css-strip": "node strip-bom.js '*'",
     "css-strip-corredor": "node strip-bom.js Corredor",
     "css-strip-murga": "node strip-bom.js Murga",
     "css-strip-elmylar": "node strip-bom.js ElMylar",
     "css-strip-bitarcher": "node strip-bom.js BitArcher",
     "js": "gulp build-js",
     "js-corredor": "gulp build-js-corredor",
+    "js-corredor-check": "gulp build-js-corredor-check",
     "js-murga": "gulp build-js-murga",
     "js-elmylar": "gulp build-js-elmylar",
     "js-bitarcher": "gulp build-js-bitarcher"
@@ -33,12 +33,12 @@
   },
   "homepage": "https://github.com/Neos21/HatenaBlogs#readme",
   "devDependencies": {
-    "@neos21/neos-normalize": "1.0.3",
+    "@neos21/neos-normalize": "1.0.4",
     "gulp": "3.9.1",
     "gulp-load-plugins": "1.5.0",
-    "gulp-plumber": "1.1.0",
-    "gulp-sass": "3.1.0",
-    "gulp-uglify": "2.1.2",
+    "gulp-plumber": "1.2.0",
+    "gulp-sass": "4.0.2",
+    "gulp-uglify": "3.0.1",
     "strip-bom": "3.0.0"
   }
 }
