--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neos21/hatena-blogs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Neo's Hatena Blogs",
   "scripts": {
     "gulp": "gulp",
@@ -10,7 +10,7 @@
     "css-murga": "gulp build-css-murga && npm run css-strip-murga",
     "css-elmylar": "gulp build-css-elmylar && npm run css-strip-elmylar",
     "css-bitarcher": "gulp build-css-bitarcher && npm run css-strip-bitarcher",
-    "css-strip": "node strip-bom.js '*'",
+    "css-strip": "node strip-bom.js *",
     "css-strip-corredor": "node strip-bom.js Corredor",
     "css-strip-murga": "node strip-bom.js Murga",
     "css-strip-elmylar": "node strip-bom.js ElMylar",
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/Neos21/HatenaBlogs#readme",
   "devDependencies": {
-    "@neos21/neos-normalize": "1.0.5",
+    "@neos21/neos-normalize": "1.0.6",
     "gulp": "3.9.1",
     "gulp-load-plugins": "1.5.0",
     "gulp-plumber": "1.2.0",
