--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neos21/hatena-blogs",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Hatena Blogs",
   "scripts": {
     "gulp": "gulp",
@@ -21,16 +21,20 @@
     "js-elmylar": "gulp build-js-elmylar",
     "js-elmylar-check": "gulp build-js-elmylar-check"
   },
+  "author": "Neo <neos21@gmail.com> (http://neo.s21.xrea.com/)",
+  "license": "MIT",
+  "homepage": "https://github.com/Neos21/hatena-blogs#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Neos21/hatena-blogs.git"
   },
-  "author": "Neo <neos21@gmail.com> (http://neo.s21.xrea.com/)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Neos21/hatena-blogs/issues"
   },
-  "homepage": "https://github.com/Neos21/hatena-blogs#readme",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/Neos21"
+  },
   "devDependencies": {
     "@neos21/neos-normalize": "1.0.12",
     "gulp": "3.9.1",
