--- a/.github/workflows/deploy-to-github-pages.yaml
+++ b/.github/workflows/deploy-to-github-pages.yaml
@@ -13,7 +13,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      
+      - name: Install
+        run : npm install
+      - name: Build To dist/ Directory
+        run : npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
