--- a/.github/workflows/publish-to-gpr.yaml
+++ b/.github/workflows/publish-to-gpr.yaml
@@ -27,6 +27,8 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install
         run : npm install
+        env :
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build To dist/ Directory
         run : npm run build
       - name: Publish
