--- a/.github/workflows/deploy-to-github-pages.yaml
+++ b/.github/workflows/deploy-to-github-pages.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Install
         run : npm install
       - name: Build To dist/ Directory
-        run : npm run build
+        run : npm run build --if-present
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
